# Wald-Score-Likelihoodratio

./: .gitignore  README.md  pyproject.toml
outputs/: report.md
outputs_reg_after/: report.md  results.csv
outputs_reg_before/: report.md  results.csv  summary_before.csv
outputs_smoke/: report.md  results.csv
outputs_smoke2/: report.md  results.csv
outputs_smoke3/: report.md  results.csv
outputs_smoke_all/: report.md  results.csv
outputs_smoke_inv/: report.md  results.csv
outputs_smoke_ph/: report.md  results.csv
outputs_smoke_runtime/: report.md  results.csv
outputs_smoke_runtime2/: report.md  results.csv
outputs_smoke_zip/: report.md  results.csv
outputs_tmp/: report.md  results.csv
scripts/: run_all.py
src/wslr/: __init__.py  tests_core.py  types.py  utils.py
src/wslr/runner/: __init__.py  harness.py  plots.py  report.py
src/wslr/scenarios/: __init__.py  base.py  collinearity.py  common.py  invariance_demo.py  linear_regression.py  linear_regression_heteroskedastic.py  logistic_clustered.py  logistic_local_alternatives.py  logistic_separation.py  logistic_small_sample.py  normal_mean_known_sigma.py  phacking.py  poisson_misspec.py  wald_runtime_batch.py  zip_boundary.py
